# auto_cv

./: .gitignore  Dockerfile  README.md  agent.py  debug_easy_apply.py  linkedin_session.json  pyproject.toml  save_linkedin_session.py  test_sheets.py
ai_engine/: company_research.py  cover_letter.py  follow_up.py  resume_generator.py
applier/: external_applier.py  form_filler.py  linkedin_applier.py
assets/: Resume_DevOps_SRE.html  cv_full_template.html  resume_template.html
config/: cv_data.py  settings.py
scrapers/: base_scraper.py  country_scrapers.py  indeed_scraper.py  linkedin_scraper.py
scripts/: generate_cache_from_logs.py  generate_cv.py
tracker/: local_cache.py  sheets_tracker.py
